# kadent

./: .gitignore  Cargo.toml  README.md  project.hexpat
.claude/: settings.local.json
src/: app.rs  colors.rs  consts.rs  fonts.rs  main.rs  ui_state.rs  utils.rs
src/commands/: export.rs  graph.rs  mod.rs  note_edit.rs  project_updater.rs  track.rs
src/commands/graph/: edge.rs  kasl_node.rs  node_addition.rs  node_deletion.rs
src/commands/note/: note_addition.rs  note_deletion.rs  note_move.rs
src/commands/region/: region_addition.rs  region_deletion.rs  region_move.rs  regon_addition.rs
src/components/: dialog.rs  mod.rs  scrolled_panel.rs  text_input.rs  vu_meter.rs
src/core/: frame_process.rs  mod.rs  project_setup.rs
src/core/kasl_node/: error.rs  mod.rs
src/core/metadata/: graph_meta.rs  mod.rs  node_meta.rs  region_meta.rs  track_meta.rs
src/kasl_node/: error.rs  mod.rs
src/load_write/: audio_ctx_io.rs  error.rs  graph_io.rs  init.rs  load_proj_res.rs  mod.rs  project_io.rs
src/load_write/node_io/: kasl_node.rs  mod.rs
src/load_write/project_meta_io/: graph_meta.rs  mod.rs  track_meta.rs
src/load_write/tempo_map_io/: mod.rs  tempo_event.rs
src/metadata/: graph_meta.rs  mod.rs  node_graph_layout.rs  node_meta.rs  region_meta.rs  track_meta.rs
src/project_io/: write.rs
src/storage/: audio_ctx.rs  graph.rs  load_proj_res.rs  mod.rs  project.rs
src/theme/: colors.rs
src/ui/: mod.rs  playhead_calculation.rs
src/ui_state/: editor_state.rs  mod.rs  node_graph_state.rs  panel_layout.rs  piano_roll_state.rs  timeline_state.rs
(+114 files in other folders)
