[package]
name = "knodiq"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.33.3"
egui_extras = { version = "*", features = ["all_loaders"] }
kasl = { git = "https://github.com/hatya-mouse/kasl", version = "0.1.0" }
kasl_node = { git = "https://github.com/hatya-mouse/kasl_node", version = "0.1.0" }
knodiq_engine = { git = "https://github.com/hatya-mouse/knodiq_engine", version = "0.3.10" }
tempfile = "3.27.0"
