[package]
name = "kadent"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.34.3"
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
hound = "3.5.1"
kasl = { version = "0.2.29", features = ["cranelift"] }
kadent_engine = { git = "https://github.com/hatya-mouse/kadent_engine" }
midir = "0.11.0"
rfd = "0.17.2"
ringbuf = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.150"
